@@ -33,6 +33,11 @@ Months are numbered with Tishrey being 1 and Elul 12; Adar I and Adar II are mon
 .I \-s 
 : Print sunrise/sunset times.
 .PP
+.I \-c 
+: Print Shabat enter/leave times. 
+Shabat starts 20 min before sunset, 
+and exits when three stars are out. 
+.PP
 .I \-t 
 : Print day times list.
 .PP
